--- a/www/langs/custom.pt-br.json
+++ b/www/langs/custom.pt-br.json
@@ -1,85 +1,83 @@
-{
-  "tr-custom-packages": "Pacotes Instalados",
-  "tr-custom-defaults": "Script executado na primeira inicialização (uci-defaults)",
-  "tr-postinst": "Postinst (Script de Instalação de Pacote)",
-  "tr-uci": "UCI-defaults (Script de Configuração de Boot)",
-  "tr-package-search": "Busca de Pacotes",
-  "tr-add-commands": "Adicionar Comando",
-  "tr-base-size": "Base",
-  "tr-added-size": "Adicionado",
-  "tr-total-size": "Total",
-  "tr-package-size-snapshot-unavailable": "※ Informações de tamanho de pacote não estão disponíveis para builds SNAPSHOT",
-  "tr-package-size-note": "※ Pacotes de idioma e dependências não estão incluídos",
-  "tr-uci-size-limit": "※ Limite de tamanho de arquivo: 20480 bytes: 20,00 KB",
-  "tr-import-settings": "Importar",
-  "tr-export-settings": "Exportar",
-  "tr-asu-status-checking": "Verificando...",
-  "tr-asu-status-online": "Online",
-  "tr-asu-status-offline": "Offline",
-  "tr-asu-status-error": "Erro",
-  "tr-asu-status-200": "Servidor ASU está acessível. Status: {status}",
-  "tr-asu-status-500": "Servidor ASU respondeu com um erro interno. Status: {status}",
-  "tr-asu-status-unreachable": "Servidor ASU respondeu com um status inesperado. Status: {status}",
-  "tr-asu-status-networkfail": "Falha ao acessar o servidor ASU: {error}",
-  "tr-extended-info": "Informações de Região e ISP",
-  "tr-loading": "Carregando…",
-  "tr-notice": "Aviso",
-  "tr-country": "Área",
-  "tr-timezone": "Fuso Horário",
-  "tr-zonename": "Nome da Zona",
-  "tr-isp": "ISP",
-  "tr-as": "Número AS",
-  "tr-ip-address": "Endereço",
-  "tr-method": "Tipo de Conexão",
-  "tr-basic-configuration": "Configuração Básica",
-  "tr-language": "Idioma",
-  "tr-device-name": "Nome do Dispositivo",
-  "tr-root-password": "Senha Root",
-  "tr-lan-ipv4-address": "Endereço IPv4 LAN",
-  "tr-lan-ipv6-address": "Endereço IPv6 LAN",
-  "tr-ssh-interface": "Interface SSH",
-  "tr-ssh-port": "Porta SSH",
-  "tr-lan-dhcp-start": "Início DHCP",
-  "tr-lan-dhcp-limit": "Limite DHCP",
-  "tr-lan-dhcp-lease-time": "Tempo de Concessão DHCP",
-  "tr-wifi-configuration": "Configuração Wi-Fi",
-  "tr-wifi-disabled": "Wi-Fi Desabilitado",
-  "tr-wifi-enabled": "Wi-Fi Habilitado",
-  "tr-wifi-radio0": "Banda 2,4GHz",
-  "tr-wifi-radio1": "Banda 5GHz",
-  "tr-ssid-2ghz": "SSID (2,4GHz)",
-  "tr-ssid-5ghz": "SSID (5GHz)",
-  "tr-password-2ghz": "Senha (2,4GHz)",
-  "tr-password-5ghz": "Senha (5GHz)",
-  "tr-encryption": "Criptografia",
-  "tr-wifi-country-code": "Código do País",
-  "tr-wifi-advanced": "Configurações Avançadas de Wi-Fi",
-  "tr-wmm-enabled": "WMM (QoS)",
-  "tr-ieee80211w": "Proteção de Quadro de Gerenciamento 802.11w",
-  "tr-80211w-disabled": "Desabilitado",
-  "tr-80211w-optional": "Opcional",
-  "tr-80211w-required": "Obrigatório",
-  "tr-internet-connection": "Conexão com Internet",
-  "tr-manual-setting": "Configuração Manual",
-  "tr-manual-setting-warning": "Modo de configuração manual: A detecção automática está desabilitada. Configure manualmente.",
-  "tr-auto": "Automático",
-  "tr-auto-detection": "Detecção Automática",
-  "tr-dhcp": "DHCP",
-  "tr-pppoe": "PPPoE",
-  "tr-dslite": "DS-Lite",
-  "tr-mape": "MAP-E",
-  "tr-ap-mode": "Modo Ponto de Acesso",
-  "tr-pppoe-username": "Nome de Usuário",
-  "tr-pppoe-password": "Senha",
-  "tr-dslite-aftr": "Endereço AFTR",
-  "tr-mape-settings": "Configurações MAP-E",
-  "tr-mape-ipv4addr": "Endereço IPv4",
-  "tr-mape-ip6prefix": "Prefixo IPv6",
-  "tr-mape-peeraddr": "Endereço Peer",
-  "tr-mape-psidlen": "Comprimento PSID",
-  "tr-mape-psid": "PSID",
-  "tr-mape-offset": "Deslocamento",
-  "tr-ap-dhcp-enabled": "DHCP Habilitado",
-  "tr-ap-gateway": "Gateway",
-  "tr-tuning": "Ajustes",
-  "tr-
+"tr-netopt-optimization": "Otimização Dinâmica de Rede",
+  "tr-netopt-optimization-disabled": "Otimização Desabilitada",
+  "tr-manual": "Manual",
+  "tr-auto-mode": "Modo Automático",
+  "tr-auto-optimization": "Otimização Automática",
+  "tr-manual-mode": "Modo Manual",
+  "tr-manual-settings": "Configurações Manuais",
+  "tr-tcp-read-memory": "Memória de Leitura TCP",
+  "tr-tcp-write-memory": "Memória de Escrita TCP",
+  "tr-connection-tracking-max": "Máximo de Rastreamento de Conexão",
+  "tr-network-device-backlog": "Backlog de Dispositivo de Rede",
+  "tr-socket-max-connections": "Máximo de Conexões de Socket",
+  "tr-tcp-congestion-control": "Controle de Congestionamento TCP",
+  "tr-cubic-default": "cubic (Padrão)",
+  "tr-bbr": "BBR",
+  "tr-reno": "Reno",
+  "tr-disabled-mode": "Modo Desabilitado",
+  "tr-basic-system-features": "Recursos Básicos do Sistema",
+  "tr-system-management": "Gerenciamento do Sistema",
+  "tr-network-management": "Gerenciamento de Rede",
+  "tr-wifi-management": "Gerenciamento Wi-Fi",
+  "tr-modem-support": "Suporte a Modem",
+  "tr-security-tools": "Ferramentas de Segurança",
+  "tr-system-monitoring": "Monitoramento do Sistema",
+  "tr-diagnostic-tools": "Ferramentas de Diagnóstico de Rede",
+  "tr-system-tools": "Ferramentas de Administração do Sistema",
+  "tr-themes-dashboard": "Temas e Painel",
+  "tr-utilities": "Utilitários",
+  "tr-usb-storage": "Suporte a Armazenamento USB",
+  "tr-file-sharing": "Compartilhamento de Arquivos",
+  "tr-dns-privacy": "DNS & Privacidade",
+  "tr-dnsmasq-settings": "Otimização do Servidor DNS",
+  "tr-dnsmasq-mode": "Modo do Servidor DNS",
+  "tr-dnsmasq-auto": "Automático",
+  "tr-dnsmasq-manual": "Manual",
+  "tr-dnsmasq-disabled": "Desabilitado",
+  "tr-dnsmasq-cache": "Tamanho do Cache",
+  "tr-dnsmasq-negcache": "Cache Negativo",
+  "tr-dnsmasq-auto-optimization": "Otimização Automática",
+  "tr-dnsmasq-optimization-disabled": "Otimização Desabilitada",
+  "tr-feedback-link": "Fórum",
+
+  "tr-tui-main-menu": "Menu Principal",
+  "tr-tui-select": "Selecionar",
+  "tr-tui-back": "Voltar",
+  "tr-tui-exit": "Sair",
+  "tr-tui-yes": "Sim",
+  "tr-tui-no": "Não",
+  "tr-tui-ok": "OK",
+  "tr-tui-cancel": "Cancelar",
+  "tr-tui-review-configuration": "Revisar e Aplicar Configuração",
+  "tr-tui-view-device-info": "Ver Informações do Dispositivo",
+  "tr-tui-view-package-list": "Ver Lista de Pacotes",
+  "tr-tui-view-config-vars": "Ver Variáveis de Configuração",
+  "tr-tui-view-postinst": "Ver postinst.sh",
+  "tr-tui-view-setup": "Ver setup.sh",
+  "tr-tui-apply-config": "Aplicar Configuração",
+  "tr-tui-device-information": "Informações do Dispositivo",
+  "tr-tui-package-list": "Lista de Pacotes",
+  "tr-tui-config-vars": "Variáveis de Configuração",
+  "tr-tui-no-packages": "Nenhum pacote selecionado",
+  "tr-tui-no-config-vars": "Nenhuma variável de configuração definida",
+  "tr-tui-postinst-not-found": "Arquivo postinst.sh não encontrado",
+  "tr-tui-setup-not-found": "Arquivo setup.sh não encontrado",
+  "tr-tui-apply-confirm": "Aplicar esta configuração?\n\nIsto irá:\n1. Instalar pacotes via postinst.sh\n2. Aplicar configurações via setup.sh\n3. Opcionalmente reiniciar\n\nContinuar?",
+  "tr-tui-installing-packages": "Executando instalação de pacotes...",
+  "tr-tui-applying-config": "Aplicando configuração do sistema...",
+  "tr-tui-config-applied": "Configuração aplicada com sucesso!\n\nReiniciar agora?",
+  "tr-tui-auto-config-applied": "Configuração automática aplicada!",
+  "tr-tui-use-auto-config": "Usar esta configuração detectada automaticamente?",
+  "tr-tui-package-categories": "Categorias de Pacotes",
+  "tr-tui-select-category": "Selecionar categoria:",
+  "tr-tui-space-toggle": "Espaço=alternar",
+  "tr-tui-ui-mode-select": "Selecionar modo de UI:",
+  "tr-tui-ui-whiptail": "whiptail (TUI baseado em diálogo)",
+  "tr-tui-ui-simple": "simple (TUI baseado em lista)",
+  "tr-tui-ui-choice": "Escolha",
+  "tr-tui-ui-installing": "Instalando whiptail...",
+  "tr-tui-ui-install-success": "whiptail instalado com sucesso!",
+  "tr-tui-ui-install-failed": "Falha na instalação, usando modo simples",
+  "tr-tui-gua": "GUA",
+  "tr-tui-pd": "PD"
+}
